# atxfox-psfe

./: .cproject  .gitignore  .gitmodules  .project  ATXFE_HW1-0.xml  CMakeLists.txt  PSFE_HW1-0.xml  README.md  readme.md
.github/matrices/: cmake-flags.json
application/inc/: error_base.h  mode.h  psfe.h  psfe_flags.h
application/src/: main.c
drivers/components/inc/: lcd.h  st7066u_driver_flags.h  td1208_driver_flags.h  trcs.h  trcs_driver_flags.h
drivers/components/src/: lcd.c  st7066u_hw.c  td1208.c  td1208_hw.c  trcs.c  trcs_hw.c
drivers/device/inc/: stm32l0xx_device_flags.h
drivers/peripherals/inc/: gpio_mapping.h  lpuart.h  mcu_mapping.h  nvic.h  nvic_priority.h  nvm_address.h  stm32l0xx_drivers_flags.h  tim.h
drivers/peripherals/src/: adc.c  gpio_mapping.c  mcu_mapping.c  rcc.c  tim.c
drivers/registers/inc/: stm32l0xx_registers_flags.h
drivers/utils/inc/: embedded_utils_flags.h  terminal_instance.h
drivers/utils/src/: terminal_hw.c
inc/: atxfox.h  mode.h
inc/applicative/: error.h  psfe.h
inc/components/: filter.h  lcd.h  range.h  td1208.h  trcs.h  tst868u.h
inc/peripherals/: adc.h  flash.h  gpio.h  lptim.h  lpuart.h  mapping.h  nvic.h  pwr.h  rcc.h  rtc.h  tim.h  usart.h
inc/registers/: adc_reg.h  gpio_reg.h  lptim_reg.h  lpuart_reg.h  nvic_reg.h  rcc_reg.h  tim_reg.h  usart_reg.h
inc/utils/: math.h  parser.h  string.h
linker/: psfe_hw1-0.ld
middleware/analog/inc/: analog.h
middleware/analog/src/: analog.c
middleware/hmi/inc/: hmi.h
middleware/hmi/src/: hmi.c
middleware/serial/inc/: serial.h
middleware/serial/src/: serial.c
middleware/sigfox/inc/: sigfox.h
middleware/sigfox/src/: sigfox.c
script/: HW1_0.jlink  PSFE_HW1-0_Debug.launch  PSFE_HW1-0_Run.launch  git_version.sh  psfe_hw1-0.jlink  psfe_hw1-0_debug.launch  psfe_hw1-0_run.launch
src/: main.c
src/applicative/: error.c  psfe.c
src/components/: filter.c  lcd.c  range.c  td1208.c  trcs.c  tst868u.c
src/peripherals/: adc.c  exti.c  fault.c  flash.c  gpio.c  iwdg.c  lptim.c  lpuart.c  mapping.c  nvic.c  pwr.c  rcc.c  rtc.c  tim.c  usart.c
src/utils/: math.c  parser.c  string.c
startup/: psfe_startup.c  startup_stm32.s
